// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > handles newlines in text 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Line 1                                                                       │
│ Line 2                                                                       │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders in info mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Info Message                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders in multi-line warning 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Title Line                                                                   │
│ Body Line 1                                                                  │
│ Body Line 2                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Banner > renders in warning mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ Warning Message                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
